--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <!-- contains all contents -->
 	<div class="container">
+		<div class="main-container">
 			<div class="header">
 
 			</div>
@@ -41,7 +42,7 @@
 				<!-- continue at input fields -->
 
 			</div>
-
+		</div>
 		<!-- contains sidebar -->
 		<div class="sidebar">
 			
